# 1d_dg_fr

./: .clang-format  .gitignore  CMakeLists.txt  constants.h  element.h  macro.h  main.cpp  parser.h  post.py  solver_config.h  theory.md
base/: constants.h  element.h  macro.h  parser.h  solver_config.h
examples/: example.json  post.py
examples/burgers/: compare.py  example.json  lim0_fr0.json  lim0_fr1.json  lim1_fr0.json  lim1_fr1.json  post.py  post_avg.py  run.sh
examples/lad/: example.json  post.py  run.sh
examples/sod/: post_sod.py  sod.json
header/: GaussianQuadrature.h  LGLDefines.h  MatrixUtil.h  burgers.h  config.h  constants.h  constants.py  element.h  flux.h  initializer.hpp  lad.h  macro.h  ns.h  parser.h  physics.h  physics_burgers.h  physics_lad.h  physics_ns.h  solver.h
other/: eigen_compute.py  stable_analysis.ipynb  stable_region_analysis.py  time_order.py  time_order_cerk.py  time_order_cerk_float.py
solver/: solver.cpp  solver.h
source/: burgers.cpp  flux.cpp  lad.cpp  ns.cpp  parser.cpp  physics.cpp  solver.cpp
